make docker prod works

--- a/microservice/requirements.txt
+++ b/microservice/requirements.txt
@@ -1,5 +1,5 @@
-fastapi_utils
-fastapi
-afinn
-uvicorn
-gunicorn
+fastapi-utils==0.2.1
+fastapi==0.68.0
+afinn==0.1
+uvicorn==0.17.5
+gunicorn==20.1.0
